--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,11 +14,10 @@ jobs:
         with:
           ref: ${{ github.event.release.target_commitish }}
 
-      - uses: actions/setup-node@v2-beta
+      - uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: '20'
           registry-url: https://registry.npmjs.org/
-      - run: npm i -g npm@7
       - run: npm ci
       
       - run: git config --global user.email "github-actions@github.com"
